--- a/BIM/src/main/resources/com/mycompany/bim/designer.fxml
+++ b/BIM/src/main/resources/com/mycompany/bim/designer.fxml
@@ -1,11 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ScrollBar?>
+<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/19" fx:controller="controller.DesignerController">
-   <children>
-      <Label layoutX="262.0" layoutY="170.0" text="Designer" />
-   </children>
-</AnchorPane>
+<SplitPane dividerPositions="0.6656891495601173" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1366.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.DesignerController">
+  <items>
+    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" />
+    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="453.0">
+         <children>
+            <ScrollBar layoutX="437.0" layoutY="49.0" orientation="VERTICAL" prefHeight="717.0" prefWidth="17.0" />
+            <AnchorPane layoutX="-1.0" layoutY="1.0" prefHeight="48.0" prefWidth="456.0">
+               <children>
+                  <Button fx:id="btnBack" layoutX="393.0" layoutY="5.0" mnemonicParsing="false" onAction="#clickBack" prefHeight="36.0" prefWidth="55.0" text="Back">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Button>
+               </children>
+            </AnchorPane>
+         </children></AnchorPane>
+  </items>
+</SplitPane>
