--- a/BIM/src/main/resources/com/mycompany/bim/logIn.fxml
+++ b/BIM/src/main/resources/com/mycompany/bim/logIn.fxml
@@ -2,15 +2,16 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="paneLogIn" prefHeight="588.0" prefWidth="754.0" stylesheets="@../../../css/logIn.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.LogInController">
+<AnchorPane id="paneLogIn" prefHeight="768.0" prefWidth="1366.0" stylesheets="@../../../css/logIn.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.LogInController">
    <children>
-      <AnchorPane id="paneSingIn" fx:id="paneSingIn" layoutX="188.0" layoutY="179.0" prefHeight="230.0" prefWidth="310.0">
+      <AnchorPane id="paneSingIn" fx:id="paneSingIn" layoutX="529.0" layoutY="277.0" prefHeight="230.0" prefWidth="310.0">
          <children>
             <Label layoutX="43.0" layoutY="20.0" prefHeight="20.0" prefWidth="193.0" text="Username or email address" textFill="WHITE">
                <font>
@@ -21,14 +22,16 @@
                <font>
                   <Font size="14.0" />
                </font></Label>
-            <TextField fx:id="txtLogInPassword" layoutX="36.0" layoutY="115.0" prefHeight="25.0" prefWidth="238.0" />
             <Button fx:id="btnSingIn" layoutX="36.0" layoutY="174.0" mnemonicParsing="false" onAction="#clickSigIn" prefHeight="25.0" prefWidth="238.0" text="Sing in" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font></Button>
+            <PasswordField fx:id="pswLogInPassword" layoutX="36.0" layoutY="115.0" prefHeight="25.0" prefWidth="238.0" />
+            <Button fx:id="btnShowPassword" layoutX="230.0" layoutY="116.0" mnemonicParsing="false" onAction="#clcikShowPassword" prefHeight="23.0" prefWidth="43.0" text="o" />
+            <TextField fx:id="txtShowLoginPassword" layoutX="36.0" layoutY="115.0" prefHeight="25.0" prefWidth="238.0" visible="false" />
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="paneNewToBIM" layoutX="234.0" layoutY="409.0" prefHeight="66.0" prefWidth="217.0">
+      <AnchorPane fx:id="paneNewToBIM" layoutX="575.0" layoutY="507.0" prefHeight="66.0" prefWidth="217.0">
          <children>
             <Label id="labCreateAccount" layoutX="94.0" layoutY="27.0" onMouseClicked="#clickCreateAccount" prefHeight="20.0" prefWidth="121.0" text="Create an account" textFill="#0084ff">
                <font>
@@ -40,11 +43,11 @@
                </font></Label>
          </children>
       </AnchorPane>
-      <Label layoutX="278.0" layoutY="139.0" prefHeight="22.0" prefWidth="108.0" text="Sing in to BIM" textFill="WHITE">
+      <Label layoutX="629.0" layoutY="229.0" prefHeight="22.0" prefWidth="108.0" text="Sing in to BIM" textFill="WHITE">
          <font>
             <Font name="System Bold" size="15.0" />
          </font></Label>
-      <AnchorPane id="paneSingUp" fx:id="paneSingUp" disable="true" layoutX="179.0" layoutY="50.0" prefHeight="473.0" prefWidth="328.0" visible="false">
+      <AnchorPane id="paneSingUp" fx:id="paneSingUp" disable="true" layoutX="515.0" layoutY="117.0" prefHeight="473.0" prefWidth="328.0" visible="false">
          <children>
             <Label layoutX="53.0" layoutY="208.0" text="Username" textFill="WHITE">
                <font>
